--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GOOGLE_API_KEY=AIzaSyCOvxW9ffBqFVOAhmoEVcupUzwjOqLbs2c
 SAMBANOVA_API_KEY=31b87886-df82-4d43-902f-9f25aa0eda29
+MEM0_API_KEY=m0-Qtvimm8HzvFp0pR2hJAdenPrxgsQM2udF5cfDlO4
